# slack_notification

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yaml  pytest.yaml  release.yaml
src/slack_notification/: banner.py  singleton_base.py  slack_notification.py  version.py
tests/: test_format_message.py  test_hello_world.py
