[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]


[project]
name = "slack_notification"
version = "0.1.3"
authors = [
  { name="Francis Obiagwu", email="cyber.francis@comcast.net" },
]
description = "A simple way to send slack notification"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]
keywords = ["slack", "notification", "monitoring", "telemetry", "observability"]
[project.urls]
Homepage = "https://github.com/cyber-francis/slack_notification"
Issues = "https://github.com/cyber-francis/slack_notification/issues"
